<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="nav_header_title">Gabriella Franchesca</string>
    <string name="nav_header_subtitle">gabriellafranchesca22@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="image_desc">Image Description</string>

    <string name="menu_movies">Movies</string>
    <string name="menu_tv_shows">TV Shows</string>
    <string name="menu_favorite">Favorites</string>

    <string name="title">Title</string>
    <string name="overview">Overview</string>
    <string name="date">Date</string>
    <string name="release_date">Release Date :</string>
    <string name="genre">Genre :</string>
    <string name="runtime_template">Runtime :</string>
    <string name="runtime">%s minutes</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="title_activity_favorite">FavoriteActivity</string>

    <string name="no_favorite">No Favorite %s Added</string>
    <string name="remove_favorite">Successfully removed from favorites</string>
    <string name="add_favorite">Successfully added to favorites</string>

</resources>