<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/img_poster_detail"
        android:layout_width="120dp"
        android:layout_height="180dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@drawable/poster_aquaman"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_desc" />

    <TextView
        android:id="@+id/text_title_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_poster_detail"
        app:layout_constraintTop_toTopOf="@+id/img_poster_detail"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/text_date_template_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:text="@string/release_date"
        app:layout_constraintStart_toStartOf="@+id/text_title_detail"
        app:layout_constraintTop_toBottomOf="@id/text_title_detail"
        />

    <TextView
        android:id="@+id/text_date_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/text_date_template_detail"
        app:layout_constraintTop_toBottomOf="@id/text_date_template_detail"
        tools:text="@string/date"
        />

    <TextView
        android:id="@+id/text_overview_template_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:text="@string/overview"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/img_poster_detail"
        app:layout_constraintTop_toBottomOf="@id/img_poster_detail"
        />

    <TextView
        android:id="@+id/text_overview_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        tools:text="@string/overview"
        app:layout_constraintStart_toStartOf="@+id/text_overview_template_detail"
        app:layout_constraintTop_toBottomOf="@id/text_overview_template_detail"
        />

</androidx.constraintlayout.widget.ConstraintLayout>